Terminado a estilizaçao de todos os forms e as telas de autenticaçao

--- a/gestaoEscolar/templates/gestaoEscolar/ano/ano_form.html
+++ b/gestaoEscolar/templates/gestaoEscolar/ano/ano_form.html
@@ -17,18 +17,20 @@
 {% block main %}
 
     {% if Tipo_Transacao == 'INS' %}
-        <h2>Cadastrar Ano Letivo</h2> 
+        <h2><b>Cadastrar Ano Letivo</b></h2>    
     {% elif Tipo_Transacao == 'UPD' %}
-        <h2>Atualizar dados do Ano Letivo</h2> 
+        <h2><b>Atualizar dados do Ano Letivo</b></h2>  
     {% elif Tipo_Transacao == 'CON' %}
-        <h2>Consultar Ano Letivo</h2> 
+        <h2><b>Consultar Ano Letivo</b></h2>  
     {% elif Tipo_Transacao == 'DEL' %}
-        <h2>Apagar Ano Letivo</h2>
+        <h2><b>Apagar Ano Letivo</b></h2>  
     {% endif %}
 
+    <ul class="list-group list-group-flush mb-3 mt-3">
     {% for erro in erros %}
-        {{ erro }}
+        <li class="list-group-item text-danger text-justify">{{ erro|tira_lista }}</li>
     {% endfor %}
+    </ul>
 
     <form action="
             {% if Tipo_Transacao == 'INS' %}
@@ -40,27 +42,28 @@
             {% elif Tipo_Transacao == 'DEL' %}
                 {% url 'ano_deletar' idAno %}
             {% endif %}
-        " method="POST">
+        " method="POST" class="form">
         {% csrf_token %}
 
         {% if Tipo_Transacao == 'INS' or Tipo_Transacao == 'UPD' %}
-            <fieldset>
+            <fieldset class="container-fluid">
+                <div class="row">
                 {% if Tipo_Transacao == 'INS' %}
-                    <div>
+                    <div class="form-group col-md-2">
                         <label for="id_Ano">Ano:</label>
-                        <input type="number" name="Ano" min="0" required id="id_Ano" value='{{ ano_dados.Ano }}'>
+                        <input type="number" name="Ano" min="0" max="9999" class="form-control"required id="id_Ano" value='{{ ano_dados.Ano }}'>
                     </div>
                 {% else %}
-                    <div>
+                    <div class="form-group col-md-2">
                         <label for="id_Ano">Ano:</label>
-                        <input type="number" name="Ano" min="0" disabled required id="id_Ano" value='{{ ano_dados.Ano }}'>
+                        <input type="number" name="Ano" min="0" max="9999" class="form-control" disabled id="id_Ano" value='{{ ano_dados.Ano }}'>
                     </div>
                 {% endif %}
 
                 {% if Tipo_Transacao == 'INS' %}
-                    <div>
+                    <div class="form-group col-md-3">
                         <label for="id_Situacao">Situação:</label> 
-                        <select name="Situacao" id="id_Situacao" disabled>
+                        <select name="Situacao" id="id_Situacao" disabled class="form-control">
                             {% for situacao in Tipos_Situacao %}
                                 {% if ano_dados.Situacao == situacao.0 %}
                                     <option value="{{ situacao.0 }}" selected>{{ situacao.1 }}</option>
@@ -71,19 +74,19 @@
                         </select>
                     </div>
 
-                    <div>
+                    <div class="form-group col-md-3">
                         <label for="id_Data_Inicio">Data Inicial:</label> 
-                        <input type="date" name="Data_Inicio" required id="id_Data_Inicio" value='{{ ano_dados.Data_Inicio|data_retorno }}'>
+                        <input type="date" name="Data_Inicio" class="form-control" required id="id_Data_Inicio" value='{{ ano_dados.Data_Inicio|data_retorno }}'>
                     </div>
     
-                    <div>
+                    <div class="form-group col-md-3">
                         <label for="id_Data_Fim">Data Final:</label> 
-                        <input type="date" name="Data_Fim" required id="id_Data_Fim" value='{{ ano_dados.Data_Fim|data_retorno }}'>
+                        <input type="date" name="Data_Fim" class="form-control" required id="id_Data_Fim" value='{{ ano_dados.Data_Fim|data_retorno }}'>
                     </div>
                 {% else %}
-                    <div>
+                    <div class="form-group col-md-3">
                         <label for="id_Situacao">Situação:</label> 
-                        <select name="Situacao" id="id_Situacao">
+                        <select name="Situacao" id="id_Situacao" class="form-control">
                             {% for situacao in Tipos_Situacao %}
                                 {% if ano_dados.Situacao == situacao.0 %}
                                     <option value="{{ situacao.0 }}" selected>{{ situacao.1 }}</option>
@@ -94,61 +97,64 @@
                         </select>
                     </div>
 
-
-                    <div>
+                    <div class="form-group col-md-3">
                         <label for="id_Data_Inicio">Data Inicial:</label> 
-                        <input type="date" name="Data_Inicio" disabled id="id_Data_Inicio" value='{{ ano_dados.Data_Inicio|data_retorno }}'>
+                        <input type="date" name="Data_Inicio" class="form-control" disabled id="id_Data_Inicio" value='{{ ano_dados.Data_Inicio|data_retorno }}'>
                     </div>
     
-                    <div>
+                    <div class="form-group col-md-3">
                         <label for="id_Data_Fim">Data Final:</label> 
-                        <input type="date" name="Data_Fim" disabled id="id_Data_Fim" value='{{ ano_dados.Data_Fim|data_retorno }}'>
+                        <input type="date" name="Data_Fim" class="form-control" disabled id="id_Data_Fim" value='{{ ano_dados.Data_Fim|data_retorno }}'>
                     </div>
                 {% endif %}
-
+                </div>
             </fieldset>
 
         {% else %}
 
-            <fieldset>
-                <div>
-                    <label for="id_Ano">Número:</label>
-                    <input type="number" name="Ano" min="0" disabled  id="id_Ano" value='{{ ano_dados.Ano }}'>
-                </div>
+            <fieldset class="container-fluid">
+                <div class="row">
+                    <div class="form-group col-md-2">
+                        <label for="id_Ano">Número:</label>
+                        <input type="number" name="Ano" min="0" max="9999" class="form-control" disabled  id="id_Ano" value='{{ ano_dados.Ano }}'>
+                    </div>
 
-                <div>
-                    <label for="id_Situacao">Situação:</label> 
-                    <select name="Situacao" id="id_Situacao" disabled>
-                        {% for situacao in Tipos_Situacao %}
-                            {% if ano_dados.Situacao == situacao.0 %}
-                                <option value="{{ situacao.0 }}" selected>{{ situacao.1 }}</option>
-                            {% else %}
-                                <option value="{{ situacao.0 }}" >{{ situacao.1 }}</option>
-                            {% endif %}
-                        {% endfor %}       
-                    </select>
-                </div>
-            
-                <div>
-                    <label for="id_Data_Inicio">Data Inicial:</label> 
-                    <input type="date" name="Data_Inicio" disabled  id="id_Data_Inicio" value='{{ ano_dados.Data_Inicio|data_retorno}}'>
-                </div>
+                    <div class="form-group col-md-3">
+                        <label for="id_Situacao">Situação:</label> 
+                        <select name="Situacao" id="id_Situacao" disabled class="form-control">
+                            {% for situacao in Tipos_Situacao %}
+                                {% if ano_dados.Situacao == situacao.0 %}
+                                    <option value="{{ situacao.0 }}" selected>{{ situacao.1 }}</option>
+                                {% else %}
+                                    <option value="{{ situacao.0 }}" >{{ situacao.1 }}</option>
+                                {% endif %}
+                            {% endfor %}       
+                        </select>
+                    </div>
+                
+                    <div class="form-group col-md-3">
+                        <label for="id_Data_Inicio">Data Inicial:</label> 
+                        <input type="date" name="Data_Inicio" class="form-control" disabled  id="id_Data_Inicio" value='{{ ano_dados.Data_Inicio|data_retorno}}'>
+                    </div>
 
-                <div>
-                    <label for="id_Data_Fim">Data Final:</label> 
-                    <input type="date" name="Data_Fim" disabled  id="id_Data_Fim" value='{{ ano_dados.Data_Fim|data_retorno}}'>
+                    <div class="form-group col-md-3">
+                        <label for="id_Data_Fim">Data Final:</label> 
+                        <input type="date" name="Data_Fim" class="form-control" disabled  id="id_Data_Fim" value='{{ ano_dados.Data_Fim|data_retorno}}'>
+                    </div>
                 </div>
             </fieldset>
 
         {% endif %}
 
+        <br>
         {% if Tipo_Transacao == 'INS' or Tipo_Transacao == 'UPD' %}
-            <button type="submit">Salvar</button>
+            <button type="submit" class="btn btn-primary">Salvar</button>
         {% elif Tipo_Transacao == 'DEL' and bloqueio ==  False %}
-            <button type="submit">Deletar</button>
+            <button type="submit" class="btn btn-danger">Deletar</button>
         {% endif %}
-
-        <a href="{% url 'ano_listagem' %}"> Voltar</a>
+        <a href="{% url 'ano_listagem' %}" class="btn btn-secondary"> Voltar</a>
+        <br>
+        
     </form>
 
 {% endblock  %}
