--- a/gestaoEscolar/templates/gestaoEscolar/inicio/gestaoescolar.html
+++ b/gestaoEscolar/templates/gestaoEscolar/inicio/gestaoescolar.html
@@ -5,6 +5,6 @@
 
 {% block main %}
 
-    <h1>Bem Vindo ao GEscolar {{ user.username }}</h1>   
+    <h1 class="text-center"><b>Seja Bem Vindo ao GESCOLAR</b></h1>   
     
 {% endblock  %}
