--- a/gestaoEscolar/templates/gestaoEscolar/aula/aula_form.html
+++ b/gestaoEscolar/templates/gestaoEscolar/aula/aula_form.html
@@ -17,18 +17,20 @@
 {% block main %}
 
     {% if Tipo_Transacao == 'INS' %}
-        <h2>Cadastrar aula</h2> 
+        <h2><b>Cadastrar aula</b></h2>
     {% elif Tipo_Transacao == 'UPD' %}
-        <h2>Atualizar dados do aula</h2> 
+        <h2><b>Atualizar dados do aula</b></h2>
     {% elif Tipo_Transacao == 'CON' %}
-        <h2>Consultar aula</h2> 
+        <h2><b>Consultar aula</b></h2>
     {% elif Tipo_Transacao == 'DEL' %}
-        <h2>Apagar aula</h2>
+        <h2><b>Apagar aula</b></h2>
     {% endif %}
 
+    <ul class="list-group list-group-flush mb-3 mt-3">
     {% for erro in erros %}
-        {{ erro }}
+        <li class="list-group-item text-danger text-justify">{{ erro|tira_lista }}</li>
     {% endfor %}
+    </ul>
 
     <form action="
             {% if Tipo_Transacao == 'INS' %}
@@ -40,117 +42,126 @@
             {% elif Tipo_Transacao == 'DEL' %}
                 {% url 'aula_deletar' turma.id idA %}
             {% endif %}
-        " method="POST">
+        " method="POST" class="form">
         {% csrf_token %}
 
         {% if Tipo_Transacao == 'INS' or Tipo_Transacao == 'UPD' %}
-            <fieldset>
-                <div>
-                    <label for="id_Data">Data:</label> 
-                    <input type="date" name="Data" required id="id_Data" value='{{ aula_dados.Data|data_retorno  }}'>
+            <fieldset class="container-fluid">
+                <div class="row">
+                    <div class="form-group col-md-3">
+                        <label for="id_Data">Data:</label> 
+                        <input type="date" name="Data" class="form-control" required id="id_Data" value='{{ aula_dados.Data|data_retorno  }}'>
+                    </div>
+
+                    <div class="form-group col-md-6"> 
+                        <label for="id_Tema">Tema:</label>
+                        <input type="text" name="Tema" maxlength="40" class="form-control" required id="id_Tema" value='{{ aula_dados.Tema }}'>
+                    </div>
                 </div>
 
-                <div>
-                    <label for="id_Tema">Tema:</label>
-                    <input type="text" name="Tema" maxlength="40"  required id="id_Tema" value='{{ aula_dados.Tema }}'>
+                <div class="row">                    
+                    {% if Tipo_Transacao == 'INS' %}
+                        <div class="form-group col-md-5">
+                            <label for="id_Leciona">Disciplina / Professor:</label> 
+                            <select name="Leciona" id="id_Leciona" required class="form-control">
+                                {% for leciona in lecionas %}
+                                    {% if aula_dados.Leciona.id == leciona.id %}
+                                        <option value="{{ leciona.id }}" selected>{{ leciona.nome_editado }}</option>
+                                    {% else %}
+                                        <option value="{{ leciona.id }}" >{{ leciona.nome_editado }}</option>
+                                    {% endif %}
+                                {% empty %}
+                                    <option value="" ></option>
+                                {% endfor %}       
+                            </select>
+                        </div>
+                    
+                    {% else %}
+                        <div class="form-group col-md-5">
+                            <label for="id_Leciona">Disciplina / Professor:</label> 
+                            <select name="Leciona" id="id_Leciona" disabled class="form-control">
+                                {% for leciona in lecionas %}
+                                    {% if aula_dados.Leciona.id == leciona.id %}
+                                        <option value="{{ leciona.id }}" selected>{{ leciona.nome_editado }}</option>
+                                    {% else %}
+                                        <option value="{{ leciona.id }}" >{{ leciona.nome_editado }}</option>
+                                    {% endif %}
+                                {% empty %}
+                                    <option value="" ></option>
+                                {% endfor %}       
+                            </select>
+                        </div>
+                    {% endif %}
+
+                    <div class="form-group col-md-4" >
+                        <label for="id_Turma">Turma:</label>
+                        <input type="text" name="Turma" maxlength="20" class="form-control" disabled id="id_Turma" value='{{ turma.nome_editado }}'>
+                    </div>
+
+                    {% if Tipo_Transacao != 'INS' %}
+                        <div class="form-group col-md-3">
+                            <label for="id_Bimestre">Bimestre:</label>
+                            <input type="text" name="Bimestre" maxlength="20" class="form-control" disabled id="id_Bimestre" value='{{ aula_dados.Bimestre.Bimestre }} - {{ aula_dados.Bimestre.AnoLetivo }}'>
+                        </div>
+                    {% endif %}
                 </div>
-                {% if Tipo_Transacao == 'INS' %}
-                    <div>
-                        <label for="id_Leciona">Disciplina / Professor:</label> 
-                        <select name="Leciona" id="id_Leciona" required>
-                            {% for leciona in lecionas %}
-                                {% if aula_dados.Leciona.id == leciona.id %}
-                                    <option value="{{ leciona.id }}" selected>{{ leciona.nome_editado }}</option>
-                                {% else %}
-                                    <option value="{{ leciona.id }}" >{{ leciona.nome_editado }}</option>
-                                {% endif %}
-                            {% empty %}
-                                <option value="" ></option>
-                            {% endfor %}       
-                        </select>
-                    </div>
-                
-                {% else %}
-                    <div>
-                        <label for="id_Leciona">Disciplina / Professor:</label> 
-                        <select name="Leciona" id="id_Leciona" disabled>
-                            {% for leciona in lecionas %}
-                                {% if aula_dados.Leciona.id == leciona.id %}
-                                    <option value="{{ leciona.id }}" selected>{{ leciona.nome_editado }}</option>
-                                {% else %}
-                                    <option value="{{ leciona.id }}" >{{ leciona.nome_editado }}</option>
-                                {% endif %}
-                            {% empty %}
-                                <option value="" ></option>
-                            {% endfor %}       
-                        </select>
-                    </div>
-                {% endif %}
-
-                <div>
-                    <label for="id_Turma">Turma:</label>
-                    <input type="text" name="Turma" maxlength="20" disabled id="id_Turma" value='{{ turma.nome_editado }}'>
-                </div>
-
-                {% if Tipo_Transacao != 'INS' %}
-                    <div>
-                        <label for="id_Bimestre">Bimestre:</label>
-                        <input type="text" name="Bimestre" maxlength="20" disabled id="id_Bimestre" value='{{ aula_dados.Bimestre.Bimestre }} - {{ aula_dados.Bimestre.AnoLetivo }}'>
-                    </div>
-                {% endif %}
-
             </fieldset>
 
         {% else %}
-            <fieldset>
-                <div>
-                    <label for="id_Data">Data:</label> 
-                    <input type="date" name="Data" disabled id="id_Data" value='{{ aula_dados.Data|data_retorno  }}'>
+            <fieldset class="container-fluid">
+                <div class="row"> 
+                    <div class="form-group col-md-3">
+                        <label for="id_Data">Data:</label> 
+                        <input type="date" name="Data" class="form-control" disabled id="id_Data" value='{{ aula_dados.Data|data_retorno  }}'>
+                    </div>
+
+                    <div class="form-group col-md-6">
+                        <label for="id_Tema">Tema:</label>
+                        <input type="text" name="Tema" maxlength="40" class="form-control" disabled id="id_Tema" value='{{ aula_dados.Tema }}'>
+                    </div>
                 </div>
 
-                <div>
-                    <label for="id_Tema">Tema:</label>
-                    <input type="text" name="Tema" maxlength="40"  disabled id="id_Tema" value='{{ aula_dados.Tema }}'>
-                </div>
-    
-                <div>
-                    <label for="id_Leciona">Disciplina / Professor:</label> 
-                    <select name="Leciona" id="id_Leciona" disabled>
-                        {% for leciona in lecionas %}
-                            {% if aula_dados.Leciona.id == leciona.id %}
-                                <option value="{{ leciona.id }}" selected>{{ leciona.nome_editado }}</option>
-                            {% else %}
-                                <option value="{{ leciona.id }}" >{{ leciona.nome_editado }}</option>
-                            {% endif %}
-                        {% empty %}
-                            <option value="" ></option>
-                        {% endfor %}       
-                    </select>
-                </div>
+                <div class="row">         
+                    <div class="form-group col-md-5">
+                        <label for="id_Leciona">Disciplina / Professor:</label> 
+                        <select name="Leciona" id="id_Leciona" disabled class="form-control">
+                            {% for leciona in lecionas %}
+                                {% if aula_dados.Leciona.id == leciona.id %}
+                                    <option value="{{ leciona.id }}" selected>{{ leciona.nome_editado }}</option>
+                                {% else %}
+                                    <option value="{{ leciona.id }}" >{{ leciona.nome_editado }}</option>
+                                {% endif %}
+                            {% empty %}
+                                <option value="" ></option>
+                            {% endfor %}       
+                        </select>
+                    </div>
 
-                <div>
-                    <label for="id_Turma">Turma:</label>
-                    <input type="text" name="Turma" maxlength="20" disabled id="id_Turma" value='{{ turma.nome_editado }}'>
-                </div>
+                    <div class="form-group col-md-4">
+                        <label for="id_Turma">Turma:</label>
+                        <input type="text" name="Turma" maxlength="20" class="form-control" disabled id="id_Turma" value='{{ turma.nome_editado }}'>
+                    </div>
 
-                <div>
-                    <label for="id_Bimestre">Bimestre:</label>
-                    <input type="text" name="Bimestre" maxlength="20" disabled id="id_Bimestre" value='{{ aula_dados.Bimestre.Bimestre }} - {{ aula_dados.Bimestre.AnoLetivo }}'>
+                    <div class="form-group col-md-3">
+                        <label for="id_Bimestre">Bimestre:</label>
+                        <input type="text" name="Bimestre" maxlength="20" class="form-control" disabled id="id_Bimestre" value='{{ aula_dados.Bimestre.Bimestre }} - {{ aula_dados.Bimestre.AnoLetivo }}'>
+                    </div>
                 </div>
-
             </fieldset>
 
         {% endif %}
 
+        <br>
         {% if bloqueio == False %}
             {% if Tipo_Transacao == 'INS' or Tipo_Transacao == 'UPD' %}
-                <button type="submit">Salvar</button>
+                <button type="submit" class="btn btn-primary">Salvar</button>
             {% elif Tipo_Transacao == 'DEL' %}
-                <button type="submit">Deletar</button>
+                <button type="submit" class="btn btn-danger">Deletar</button>
             {% endif %}
         {% endif %}
+        <a href="{% url 'aula_listagem' turma.id %}" class="btn btn-secondary"> Voltar</a>
+        <br>
 
-        <a href="{% url 'aula_listagem' turma.id %}"> Voltar</a>
     </form>
 
 {% endblock  %}
