--- a/gestaoEscolar/templates/gestaoEscolar/serie/matriz_item_form.html
+++ b/gestaoEscolar/templates/gestaoEscolar/serie/matriz_item_form.html
@@ -1,4 +1,5 @@
 {% extends 'projeto/base/base.html' %}
+{% load filters %}
 
 {% block title %}
     {% if Tipo_Transacao == 'INS' %}
@@ -16,18 +17,20 @@
 {% block main %}
 
     {% if Tipo_Transacao == 'INS' %}
-        <h2>Cadastrar item da matriz curricular</h2> 
+        <h2><b>Cadastrar item da matriz curricular</b></h2>
     {% elif Tipo_Transacao == 'UPD' %}
-        <h2>Atualizar dados do item da matriz curricular</h2> 
+        <h2><b>Atualizar dados do item da matriz curricular</b></h2>
     {% elif Tipo_Transacao == 'CON' %}
-        <h2>Consultar item da matriz curricular</h2> 
+        <h2><b>Consultar item da matriz curricular</b></h2>
     {% elif Tipo_Transacao == 'DEL' %}
-        <h2>Apagar item da matriz curricular</h2>
+        <h2><b>Apagar item da matriz curricular</b></h2>
     {% endif %}
 
+    <ul class="list-group list-group-flush mb-3 mt-3">
     {% for erro in erros %}
-        {{ erro }}
+        <li class="list-group-item text-danger text-justify">{{ erro|tira_lista }}</li>
     {% endfor %}
+    </ul>
 
     <form action="
             {% if Tipo_Transacao == 'INS' %}
@@ -39,64 +42,68 @@
             {% elif Tipo_Transacao == 'DEL' %}
                 {% url 'matriz_item_deletar' idSerie idMatriz_Item %}
             {% endif %}
-        " method="POST">
+        " method="POST" class="form">
         {% csrf_token %}
 
         {% if Tipo_Transacao == 'INS' or Tipo_Transacao == 'UPD' %}
-            <fieldset>
-                <div>
-                    <label for="id_Disciplina">Disciplina:</label> 
-                    <select name="Disciplina" id="id_Disciplina" required>
-                        {% for disciplina in disciplinas %}
-                            {% if matriz_item_dados.Disciplina.id == disciplina.id %}
-                                <option value="{{ disciplina.id }}" selected>{{ disciplina.Nome }}</option>
-                            {% else %}
-                                <option value="{{ disciplina.id }}" >{{ disciplina.Nome }}</option>
-                            {% endif %}
-                        {% endfor %}       
-                    </select>
-                </div>
+            <fieldset class="container-fluid">
+                <div class="row">
+                    <div class="form-group col-md-4">
+                        <label for="id_Disciplina">Disciplina:</label> 
+                        <select name="Disciplina" id="id_Disciplina" required class="form-control">
+                            {% for disciplina in disciplinas %}
+                                {% if matriz_item_dados.Disciplina.id == disciplina.id %}
+                                    <option value="{{ disciplina.id }}" selected>{{ disciplina.Nome }}</option>
+                                {% else %}
+                                    <option value="{{ disciplina.id }}" >{{ disciplina.Nome }}</option>
+                                {% endif %}
+                            {% endfor %}       
+                        </select>
+                    </div>
 
-                <div>
-                    <label for="id_Carga">Carga horária:</label>
-                    <input type="number" name="Carga" min="0"  required id="id_Carga" value='{{ matriz_item_dados.Carga }}'>
+                    <div class="form-group col-md-3">
+                        <label for="id_Carga">Carga horária:</label>
+                        <input type="number" name="Carga" min="0"  class="form-control" required id="id_Carga" value='{{ matriz_item_dados.Carga }}'>
+                    </div>
                 </div>
-
             </fieldset>
 
         {% else %}
-            <fieldset>
-                <div>
-                    <label for="id_Disciplina">Disciplina:</label> 
-                    <select name="Disciplina" id="id_Disciplina" disabled>
-                        {% for disciplina in disciplinas %}
-                            {% if matriz_item_dados.Disciplina.id == disciplina.id %}
-                                <option value="{{ disciplina.id }}" selected>{{ disciplina.Nome }}</option>
-                            {% else %}
-                                <option value="{{ disciplina.id }}" >{{ disciplina.Nome }}</option>
-                            {% endif %}
-                        {% endfor %}       
-                    </select>
-                </div>
+            <fieldset class="container-fluid">
+                <div class="row">
+                    <div class="form-group col-md-4">
+                        <label for="id_Disciplina">Disciplina:</label> 
+                        <select name="Disciplina" id="id_Disciplina" disabled class="form-control">
+                            {% for disciplina in disciplinas %}
+                                {% if matriz_item_dados.Disciplina.id == disciplina.id %}
+                                    <option value="{{ disciplina.id }}" selected>{{ disciplina.Nome }}</option>
+                                {% else %}
+                                    <option value="{{ disciplina.id }}" >{{ disciplina.Nome }}</option>
+                                {% endif %}
+                            {% endfor %}       
+                        </select>
+                    </div>
 
-                <div>
-                    <label for="id_Carga">Carga horária:</label>
-                    <input type="number" name="Carga" min="0"  disabled id="id_Carga" value='{{ matriz_item_dados.Carga }}'>
+                    <div class="form-group col-md-3">
+                        <label for="id_Carga">Carga horária:</label>
+                        <input type="number" name="Carga" min="0"  class="form-control" disabled id="id_Carga" value='{{ matriz_item_dados.Carga }}'>
+                    </div>
                 </div>
-
             </fieldset>
 
         {% endif %}
         
+        <br>
         {% if Tipo_Transacao == 'INS' and bloqueio == False %}
-            <button type="submit">Salvar</button>
+            <button type="submit" class="btn btn-primary">Salvar</button>
         {% elif Tipo_Transacao == 'UPD' %}
-            <button type="submit">Salvar</button>
+            <button type="submit" class="btn btn-primary">Salvar</button>
         {% elif Tipo_Transacao == 'DEL' and bloqueio == False %}
-            <button type="submit">Deletar</button>
+            <button type="submit" class="btn btn-danger">Deletar</button>
         {% endif %}
+        <a href="{% url 'matriz_item_listagem' idSerie %}" class="btn btn-secondary"> Voltar</a>
+        <br>
 
-        <a href="{% url 'matriz_item_listagem' idSerie %}"> Voltar</a>
     </form>
 
 {% endblock  %}
