--- a/gestaoEscolar/templates/gestaoEscolar/turma/turma_form.html
+++ b/gestaoEscolar/templates/gestaoEscolar/turma/turma_form.html
@@ -1,5 +1,5 @@
 {% extends 'projeto/base/base.html' %}
-
+{% load filters %}
 {% block title %}
     {% if Tipo_Transacao == 'INS' %}
         Cadastrar nova Turma | GEscolar 
@@ -16,18 +16,20 @@
 {% block main %}
 
     {% if Tipo_Transacao == 'INS' %}
-        <h2>Cadastrar Turma</h2> 
+        <h2><b>Cadastrar Turma</b></h2> 
     {% elif Tipo_Transacao == 'UPD' %}
-        <h2>Atualizar dados da Turma</h2> 
+        <h2><b>Atualizar dados da Turma</b></h2> 
     {% elif Tipo_Transacao == 'CON' %}
-        <h2>Consultar Turma</h2> 
+        <h2><b>Consultar Turma</b></h2> 
     {% elif Tipo_Transacao == 'DEL' %}
-        <h2>Apagar Turma</h2>
+        <h2><b>Apagar Turma</b></h2> 
     {% endif %}
 
+    <ul class="list-group list-group-flush mb-3 mt-3">
     {% for erro in erros %}
-        {{ erro }}
+        <li class="list-group-item text-danger text-justify">{{ erro|tira_lista }}</li>
     {% endfor %}
+    </ul>
 
     <form action="
             {% if Tipo_Transacao == 'INS' %}
@@ -39,62 +41,133 @@
             {% elif Tipo_Transacao == 'DEL' %}
                 {% url 'turma_deletar' idTurma %}
             {% endif %}
-        " method="POST">
+        " method="POST" class="form">
         {% csrf_token %}
 
         {% if Tipo_Transacao == 'INS' or Tipo_Transacao == 'UPD' %}
-            <fieldset>
-                <div>
-                    <label for="id_Nome">Nome (A,B,C):</label>
-                    <input type="text" name="Nome" maxlength="1" required id="id_Nome" value='{{ turma_dados.Nome }}'>
-                </div>
+            <fieldset class="container-fluid">
+                <div class="row">
+                    <div class="form-group col-md-3">
+                        <label for="id_Nome">Nome (A,B,C):</label>
+                        <input type="text" name="Nome" maxlength="1" class="form-control" required id="id_Nome" value='{{ turma_dados.Nome }}'>
+                    </div>
 
-                <div>
-                    <label for="id_Periodo">Período:</label>     
-                    <select name="Periodo" id="id_Periodo">
-                        {% for periodo in Tipo_Periodo %}
-                            {% if turma_dados.Periodo == periodo.0 %}
-                                <option value="{{ periodo.0 }}" selected>{{ periodo.1 }}</option>
-                            {% else %}
-                                <option value="{{ periodo.0 }}" >{{ periodo.1 }}</option>
-                            {% endif %}
-                        {% endfor %}       
-                    </select>
-                </div>
-
-                {% if Tipo_Transacao == 'INS' %}
-                    <div>
-                        <label for="id_Serie">Série:</label>     
-                        <select name="Serie" id="id_Serie">
-                            {% for serie in series %}
-                                {% if turma_dados.Serie == serie.id %}
-                                    <option value="{{ serie.id }}" selected>
-                                        {{ serie.Numero }}º Ano do Ensino
-                                        {% if serie.Nivel_Escolaridade == 'F' %}
-                                            Fundamental
-                                        {% else %}
-                                            Médio
-                                        {% endif %}
-                                    </option>
+                    <div class="form-group col-md-3">
+                        <label for="id_Periodo">Período:</label>     
+                        <select name="Periodo" id="id_Periodo" class="form-control">
+                            {% for periodo in Tipo_Periodo %}
+                                {% if turma_dados.Periodo == periodo.0 %}
+                                    <option value="{{ periodo.0 }}" selected>{{ periodo.1 }}</option>
                                 {% else %}
-                                    <option value="{{ serie.id }}">
-                                        {{ serie.Numero }}º Ano do Ensino
-                                        {% if serie.Nivel_Escolaridade == 'F' %}
-                                            Fundamental
-                                        {% else %}
-                                            Médio
-                                        {% endif %}
-                                    </option>
+                                    <option value="{{ periodo.0 }}" >{{ periodo.1 }}</option>
                                 {% endif %}
                             {% endfor %}       
                         </select>
                     </div>
-                {% else %}
-                    <div>
+
+                    {% if Tipo_Transacao == 'INS' %}
+                        <div class="form-group col-md-5">
+                            <label for="id_Serie">Série:</label>     
+                            <select name="Serie" id="id_Serie" class="form-control">
+                                {% for serie in series %}
+                                    {% if turma_dados.Serie == serie.id %}
+                                        <option value="{{ serie.id }}" selected>
+                                            {{ serie.Numero }}º Ano do Ensino
+                                            {% if serie.Nivel_Escolaridade == 'F' %}
+                                                Fundamental
+                                            {% else %}
+                                                Médio
+                                            {% endif %}
+                                        </option>
+                                    {% else %}
+                                        <option value="{{ serie.id }}">
+                                            {{ serie.Numero }}º Ano do Ensino
+                                            {% if serie.Nivel_Escolaridade == 'F' %}
+                                                Fundamental
+                                            {% else %}
+                                                Médio
+                                            {% endif %}
+                                        </option>
+                                    {% endif %}
+                                {% endfor %}       
+                            </select>
+                        </div>
+                    {% else %}
+                        <div class="form-group col-md-5">
+                            <label for="id_Serie">Série:</label>     
+                            <select name="Serie" id="id_Serie" disabled class="form-control">
+                                {% for serie in series %}
+                                    {% if turma_dados.Serie == serie.id %}
+                                        <option value="{{ serie.id }}" selected>
+                                            {{ serie.Numero }}º Ano do Ensino
+                                            {% if serie.Nivel_Escolaridade == 'F' %}
+                                                Fundamental
+                                            {% else %}
+                                                Médio
+                                            {% endif %}
+                                        </option>
+                                    {% else %}
+                                        <option value="{{ serie.id }}" >
+                                            {{ serie.Numero }}º Ano do Ensino
+                                            {% if serie.Nivel_Escolaridade == 'F' %}
+                                                Fundamental
+                                            {% else %}
+                                                Médio
+                                            {% endif %}
+                                        </option>
+                                    {% endif %}
+                                {% endfor %}       
+                            </select>
+                        </div>
+                    {% endif %}
+                </div>
+
+                <div class="row"> 
+                    <div class="form-group col-md-3">
+                        <label for="id_Max_Alunos">Número da sala:</label>
+                        <input type="number" name="Sala" min="0" max="999999" class="form-control" required id="id_Sala" value='{{ turma_dados.Sala }}'>
+                    </div>
+
+                    <div class="form-group col-md-4">
+                        <label for="id_Max_Alunos">Capacidade de alunos:</label>
+                        <input type="number" name="Max_Alunos" min="0" max="999999" class="form-control" required id="id_Max_Alunos" value='{{ turma_dados.Max_Alunos }}'>
+                    </div>
+
+                    {% if Tipo_Transacao == 'UPD' %}
+                        <div class="form-group col-md-2">
+                            <label for="id_AnoLetivo">Ano:</label>
+                            <input type="text" name="AnoLetivo" min="0" max="999999" class="form-control" disabled id="id_AnoLetivo" value='{{ ano }}'>
+                        </div>
+                    {% endif %}
+                </div>
+            </fieldset>
+
+        {% else %}
+            <fieldset class="container-fluid">
+                <div class="row"> 
+                    <div class="form-group col-md-3">
+                        <label for="id_Nome">Nome (A,B,C):</label>
+                        <input type="text" name="Nome" maxlength="1" class="form-control" disabled id="id_Nome" value='{{ turma_dados.Nome }}'>
+                    </div>
+
+                    <div class="form-group col-md-3">
+                        <label for="id_Periodo">Período:</label>     
+                        <select name="Periodo" id="id_Periodo" disabled class="form-control">
+                            {% for periodo in Tipo_Periodo %}
+                                {% if turma_dados.Periodo == periodo.0 %}
+                                    <option value="{{ periodo.0 }}" selected>{{ periodo.1 }}</option>
+                                {% else %}
+                                    <option value="{{ periodo.0 }}" >{{ periodo.1 }}</option>
+                                {% endif %}
+                            {% endfor %}       
+                        </select>
+                    </div>
+
+                    <div class="form-group col-md-5">
                         <label for="id_Serie">Série:</label>     
-                        <select name="Serie" id="id_Serie" disabled>
+                        <select name="Serie" id="id_Serie" disabled class="form-control">
                             {% for serie in series %}
-                                {% if turma_dados.Serie == serie.id %}
+                                {% if turma_dados.Serie.id == serie.id %}
                                     <option value="{{ serie.id }}" selected>
                                         {{ serie.Numero }}º Ano do Ensino
                                         {% if serie.Nivel_Escolaridade == 'F' %}
@@ -116,102 +189,38 @@
                             {% endfor %}       
                         </select>
                     </div>
-                {% endif %}
-
-
-                <div>
-                    <label for="id_Max_Alunos">Número da sala:</label>
-                    <input type="number" name="Sala" min="0" max="4294967295" required id="id_Sala" value='{{ turma_dados.Sala }}'>
                 </div>
 
-                <div>
-                    <label for="id_Max_Alunos">Capacidade de alunos:</label>
-                    <input type="number" name="Max_Alunos" min="0" max="4294967295" required id="id_Max_Alunos" value='{{ turma_dados.Max_Alunos }}'>
-                </div>
-
-                {% if Tipo_Transacao == 'UPD' %}
-                    <div>
-                        <label for="id_AnoLetivo">Ano:</label>
-                        <input type="text" name="AnoLetivo" min="0" max="4294967295" disabled id="id_AnoLetivo" value='{{ ano }}'>
+                <div class="row"> 
+                    <div class="form-group col-md-3">
+                        <label for="id_Max_Alunos">Número da sala:</label>
+                        <input type="number" name="Sala" min="0" max="999999" class="form-control" disabled id="id_Sala" value='{{ turma_dados.Sala }}'>
                     </div>
-                {% endif %}
-            </fieldset>
 
-        {% else %}
-            <fieldset>
-                <div>
-                    <label for="id_Nome">Nome (A,B,C):</label>
-                    <input type="text" name="Nome" maxlength="1" disabled id="id_Nome" value='{{ turma_dados.Nome }}'>
-                </div>
+                    <div class="form-group col-md-4">
+                        <label for="id_Max_Alunos">Capacidade de alunos:</label>
+                        <input type="number" name="Max_Alunos" min="0" max="999999" class="form-control" disabled id="id_Max_Alunos" value='{{ turma_dados.Max_Alunos }}'>
+                    </div>
 
-                <div>
-                    <label for="id_Periodo">Período:</label>     
-                    <select name="Periodo" id="id_Periodo" disabled>
-                        {% for periodo in Tipo_Periodo %}
-                            {% if turma_dados.Periodo == periodo.0 %}
-                                <option value="{{ periodo.0 }}" selected>{{ periodo.1 }}</option>
-                            {% else %}
-                                <option value="{{ periodo.0 }}" >{{ periodo.1 }}</option>
-                            {% endif %}
-                        {% endfor %}       
-                    </select>
+                    <div class="form-group col-md-2">
+                        <label for="id_AnoLetivo">Ano:</label>
+                        <input type="text" name="AnoLetivo" min="0" max="999999" class="form-control" disabled id="id_AnoLetivo" value='{{ turma_dados.AnoLetivo }}'>
+                    </div>
                 </div>
-
-                <div>
-                    <label for="id_Serie">Série:</label>     
-                    <select name="Serie" id="id_Serie" disabled>
-                        {% for serie in series %}
-                            {% if turma_dados.Serie.id == serie.id %}
-                                <option value="{{ serie.id }}" selected>
-                                    {{ serie.Numero }}º Ano do Ensino
-                                    {% if serie.Nivel_Escolaridade == 'F' %}
-                                        Fundamental
-                                    {% else %}
-                                        Médio
-                                    {% endif %}
-                                </option>
-                            {% else %}
-                                <option value="{{ serie.id }}" >
-                                    {{ serie.Numero }}º Ano do Ensino
-                                    {% if serie.Nivel_Escolaridade == 'F' %}
-                                        Fundamental
-                                    {% else %}
-                                        Médio
-                                    {% endif %}
-                                </option>
-                            {% endif %}
-                        {% endfor %}       
-                    </select>
-                </div>
-
-                <div>
-                    <label for="id_Max_Alunos">Número da sala:</label>
-                    <input type="number" name="Sala" min="0" max="4294967295" disabled id="id_Sala" value='{{ turma_dados.Sala }}'>
-                </div>
-
-                <div>
-                    <label for="id_Max_Alunos">Capacidade de alunos:</label>
-                    <input type="number" name="Max_Alunos" min="0" max="4294967295" disabled id="id_Max_Alunos" value='{{ turma_dados.Max_Alunos }}'>
-                </div>
-
-                
-                <div>
-                    <label for="id_AnoLetivo">Ano:</label>
-                    <input type="text" name="AnoLetivo" min="0" max="4294967295" disabled id="id_AnoLetivo" value='{{ turma_dados.AnoLetivo }}'>
-                </div>
-                
             </fieldset>
         {% endif %}
         
+        <br>
         {% if Tipo_Transacao == 'INS' and bloqueio == False %}
-            <button type="submit">Salvar</button>
+            <button type="submit" class="btn btn-primary">Salvar</button>
         {% elif Tipo_Transacao == 'UPD' %}
-            <button type="submit">Salvar</button>
+            <button type="submit" class="btn btn-primary">Salvar</button>
         {% elif Tipo_Transacao == 'DEL' %}
-            <button type="submit">Deletar</button>
+            <button type="submit" class="btn btn-danger">Deletar</button>
         {% endif %}
+        <a href="{% url 'turma_listagem' %}" class="btn btn-secondary"> Voltar</a>
+        <br>
 
-        <a href="{% url 'turma_listagem' %}"> Voltar</a>
     </form>
 
 {% endblock  %}
