--- a/templates/projeto/base/menu.html
+++ b/templates/projeto/base/menu.html
@@ -11,24 +11,6 @@
                 </li>
             {% endif %}
 
-            {% if request.session.Tipo_Pessoa == 'D' %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'secretario_listagem' %}">Secretários</a>
-                </li>
-            {% endif %}
-
-            {% if request.session.Tipo_Pessoa == 'D' or request.session.Tipo_Pessoa == 'S' %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'professor_listagem' %}">Professores</a>
-                </li>  
-            {% endif %}
-
-            {% if request.session.Tipo_Pessoa == 'D' or request.session.Tipo_Pessoa == 'S' %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'aluno_listagem' %}">Alunos</a>
-                </li>  
-            {% endif %}
-
             {% if request.session.Tipo_Pessoa == 'D' or request.session.Tipo_Pessoa == 'S' %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'disciplina_listagem' %}">Disciplinas</a>
@@ -56,7 +38,26 @@
             <!-- Dropdown -->
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                    Usuário
+                    Usuários
+                </a>
+                <div class="dropdown-menu bg-dark">
+                    {% if request.session.Tipo_Pessoa == 'D' %}
+                        <a class="dropdown-item text-muted" href="{% url 'secretario_listagem' %}">Secretários</a>
+                    {% endif %}
+        
+                    {% if request.session.Tipo_Pessoa == 'D' or request.session.Tipo_Pessoa == 'S' %}
+                        <a class="dropdown-item text-muted" href="{% url 'professor_listagem' %}">Professores</a> 
+                    {% endif %}
+        
+                    {% if request.session.Tipo_Pessoa == 'D' or request.session.Tipo_Pessoa == 'S' %}
+                        <a class="dropdown-item text-muted" href="{% url 'aluno_listagem' %}">Alunos</a> 
+                    {% endif %}
+                </div>
+            </li>
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                    Conta
                 </a>
                 <div class="dropdown-menu bg-dark">
                     {% if request.session.Tipo_Pessoa == 'D' %}
